@@ -8,7 +8,7 @@ ram_size = 16
 #ELF. It means virtualmips reads an elf image(setten by kernel_file_name) into sdram and then boots from elf entry point. The elf image contains kernel and rootfs.
 #Default boot method is ELF.
 #1:Binary 2:elf
-boot_method = 1
+boot_method = 2
 
 
 #boot_from MUST be set if boot_method=1.
