@@ -16,6 +16,9 @@ typedef struct vp_clock vp_clock_t;
 extern vp_clock_t *rt_clock;
 extern vp_clock_t *vm_clock;
 
+
+ void init_get_clock(void);
+ vp_clock_t *vp_new_clock(int type);
 m_int64_t vp_get_clock(vp_clock_t *clock);
 
 #endif
