@@ -1,5 +1,5 @@
 #include <stdlib.h>
-
+ #include<string.h>
 #include "vp_timer.h"
 #include "vp_clock.h"
 
